WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287424
[SVG] Never try to construct multiple lines for svg content
https://bugs.webkit.org/show_bug.cgi?id=287424
Summary
[SVG] Never try to construct multiple lines for svg content
alan
Reported
2025-02-10 12:18:19 PST
<
rdar://144499744
>
Attachments
Patch
(6.40 KB, patch)
2025-02-10 12:19 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(6.40 KB, patch)
2025-02-11 05:14 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2025-02-10 12:19:37 PST
Created
attachment 474182
[details]
Patch
Ahmad Saleem
Comment 2
2025-02-10 15:51:31 PST
@Alan - we do have few SVG Text cases on WPT expecting multiple lines - are they different?
https://wpt.fyi/results/svg/text/reftests?label=master&label=experimental&aligned&q=text-multiline-00
alan
Comment 3
2025-02-10 16:09:27 PST
This behavior is specific to legacy layout. Those tests may start passing once we enabled IFC for SVG (and after adding certain features).
Ahmad Saleem
Comment 4
2025-02-10 16:56:08 PST
(In reply to zalan from
comment #3
)
> This behavior is specific to legacy layout. Those tests may start passing > once we enabled IFC for SVG (and after adding certain features).
Noted. Thanks for clarifying!
alan
Comment 5
2025-02-11 05:14:32 PST
Created
attachment 474198
[details]
[fast-cq]Patch
EWS
Comment 6
2025-02-11 10:00:26 PST
Committed
290218@main
(c46c3b61f74e): <
https://commits.webkit.org/290218@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 474198
[details]
.
Radar WebKit Bug Importer
Comment 7
2025-02-11 10:01:33 PST
<
rdar://problem/144623955
>
EWS
Comment 8
2025-02-12 11:43:34 PST
Committed
289651.94@safari-7621-branch
(8e7d888946ff): <
https://commits.webkit.org/289651.94@safari-7621-branch
> Reviewed commits have been landed. Closing PR #2577 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug