[SVG] Never try to construct multiple lines for svg content https://bugs.webkit.org/show_bug.cgi?id=287424

Reviewed by Antti Koivisto.

1. SVG content has no breakable positions (see canBreakAtThisPosition)
2. Refuse to construct subsequent lines for SVG content

* LayoutTests/fast/svg/assert-when-trying-to-construct-multiple-lines-expected.txt: Added.
* LayoutTests/fast/svg/assert-when-trying-to-construct-multiple-lines.html: Added.
* Source/WebCore/rendering/LegacyLineLayout.cpp:
(WebCore::LegacyLineLayout::constructLine):
* Source/WebCore/rendering/line/BreakingContext.h:
(WebCore::BreakingContext::canBreakAtThisPosition):
(WebCore::textBeginsWithBreakablePosition): Deleted.

Canonical link: https://commits.webkit.org/290218@main